# telexpense

./: .env.example  .gitignore  AGENTS.md  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json  vercel.json
app/: __init__.py  budget.py  config.py  db.py  globals.css  layout.tsx  main.py  parser.py  telegram.py
app/api/accounts/: route.ts
app/api/budgets/: route.ts
app/api/categories/: route.ts
app/api/jobs/recurring/: route.ts
app/api/portfolio-snapshots/: route.ts
app/api/recurring-rules/: route.ts
app/api/summary/: route.ts
app/api/transactions/: route.ts
app/api/transfers/: route.ts
components/: Dashboard.tsx  PendingButton.tsx
docs/: architecture.md
lib/: amountFormat.ts  budget.ts  budgetThemes.ts  env.ts  finance.ts  identity.ts  parser.ts  repository.ts  supabaseAdmin.ts  telegram.ts  transactionCapture.ts  transactionCategory.ts  transfer.ts  validation.ts
static/: app.js  index.html  styles.css
supabase/: schema.sql
supabase/migrations/: 20260627073608_canonical_categories_and_balance_invariants.sql  20260627090000_secure_normalize_identity_and_category_fk.sql  20260627110000_atomic_bounded_recurring_materialization.sql  20260628120000_seed_canonical_transaction_identities.sql  20260628130000_aggregate_investment_contributions.sql  20260629120000_subcategory_transaction_capture.sql  20260709095707_allow_categoryless_transfers.sql  20260709112505_atomic_delete_transfer_group.sql  20260709150803_subcategory_budgets.sql
tests/: test_budget.py  test_parser.py
tests-ts/: domain.test.ts  pending-button.test.ts
(+4 files in other folders)
